# traffic_violation_detection

./: .dockerignore  .env.example  .gitignore  README.md  detect.py  judge.py  main.py  preprocess.py  pyproject.toml  yolo_infernce.py
detector/: __init__.py  classifier.py  detect.py  detection.py  draw.py  filter.py  integrated_pipeline.py  judge.py  merger.py  pipeline.py  preprocess.py  saver.py  server.py  settings.py  splitter.py
detector/api/: __init__.py  judge.py
detector/common/: response.py
detector/models/: __init__.py  detect_model.py  judge_model.py  local_model.py
detector/tasks/: judge_task.py
detector/utils/: image_tools.py  log.py
docker/cuda/: .env.example  Dockerfile  docker-compose.yaml
docker/cuda/volumes/nginx/: nginx.conf
docker/rocm/: Dockerfile  docker-compose.yaml
server/: .dockerignore  .env.example  README.md  main.py  pyproject.toml  ruff.toml
server/detector/: detect.py  draw.py  filter.py  settings.py
server/detector/api/: __init__.py  dep.py  detect.py  health.py  history.py  judge.py  prompt.py  provider.py
server/detector/api/v1/: __init__.py  detect.py  health.py  history.py  judge.py  prompt.py  provider.py
server/detector/clients/: __init__.py  vision.py  yolo.py
server/detector/common/: response.py
server/detector/db/: __init__.py  engine.py  storage.py  tables.py
server/detector/models/: __init__.py  detect.py  detect_model.py  history.py  judge.py  judge_model.py  prompt.py  provider.py  response.py
server/detector/pipelines/: __init__.py  detect.py
server/detector/repositories/: __init__.py  detect.py  judge.py  prompt.py  provider.py
server/detector/services/: __init__.py  detect.py  history.py  judge.py  prompt.py  provider.py
server/detector/utils/: __init__.py  draw.py  filter.py  image_tools.py  log.py
web/: .dockerignore  .env.example  .prettierrc.json  Dockerfile  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts  vitest.config.ts
web/src/: App.vue  main.ts
web/src/api/: client.ts  detect.ts  history.ts  judge.ts  prompt.ts  provider.ts
web/src/components/__tests__/: HelloWorld.spec.ts
web/src/components/detect/: DetectionImage.vue  DetectionList.vue  ImageUploader.vue  JudgePanel.vue
web/src/components/layout/: AppLayout.vue
web/src/components/settings/: PromptList.vue  ProviderForm.vue  ProviderList.vue  ProviderModelManager.vue
web/src/composables/: useMessage.ts
web/src/router/: index.ts
web/src/stores/: detect.ts  history.ts  prompt.ts  provider.ts  theme.ts
web/src/stores/__tests__/: detect.spec.ts  history.spec.ts  prompt.spec.ts  provider.spec.ts
web/src/types/: api.ts
web/src/utils/: image.ts
web/src/views/: DetectView.vue  HistoryDetailView.vue  HistoryView.vue  HomeView.vue  SettingsView.vue
