[project]
name = "traffic-violation-detection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "decord>=0.6.0",
    "lmdb>=2.2.1",
    "loguru>=0.7.3",
    "openai>=2.38.0",
    "opencv-python-headless>=4.13.0.92",
    "peft>=0.19.1",
    "pillow>=12.2.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "torch>=2.12.0",
    "torchvision>=0.27.0",
    "transformers==4.57.1",
    "ultralytics>=8.4.56",
]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/rocm7.2"
