[project]
name = "traffic-violation-detection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.136.3",
    "loguru>=0.7.3",
    "openai>=2.38.0",
    "opencv-python-headless>=4.13.0.92",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "tqdm>=4.66.5",
    "ultralytics>=8.4.56",
]

[project.optional-dependencies]
cuda = ["torch>=2.12.0", "torchvision>=0.27.0"]
rocm = ["torch>=2.12.0", "torchvision>=0.27.0"]

[tool.uv]
conflicts = [[{ extra = "cuda" }, { extra = "rocm" }]]

[tool.uv.sources]
torch = [{ extra = "cuda", index = "pytorch-cu130" }, { extra = "rocm", index = "pytorch-rocm72" }]
torchvision = [{ extra = "cuda", index = "pytorch-cu130" }, { extra = "rocm", index = "pytorch-rocm72" }]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"

[[tool.uv.index]]
name = "pytorch-rocm72"
url = "https://download.pytorch.org/whl/rocm7.2"
