[project]
name = "traffic-violation-detection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.136.3",
    "loguru>=0.7.3",
    "openai>=2.38.0",
    "opencv-python-headless>=4.13.0.92",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "ultralytics>=8.4.56",
    "torch>=2.12.0",
    "torchvision>=0.27.0",
]
